--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.7.0",
     "html-webpack-plugin": "^3.2.0",
+    "less": "^3.0.4",
+    "less-loader": "^4.1.0",
     "nodemon": "^1.17.3",
     "style-loader": "^0.21.0",
     "webpack": "^4.5.0",
