--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,6 +11,8 @@
     "react/jsx-filename-extension": "off",
     "jsx-a11y/heading-has-content": "off",
     "react/jsx-one-expression-per-line": "off",
-    "no-plusplus": "off"
+    "no-plusplus": "off",
+    "no-param-reassign": "off",
+    "no-loop-func": "off"
   }
 }
