--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Tim Oehler",
   "license": "ISC",
   "dependencies": {
+    "@material-ui/core": "^1.3.0",
     "express": "^4.16.3",
     "prop-types": "^15.6.2",
     "react": "^16.3.1",
