support for displaying number of solution steps

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,6 +13,7 @@
     "react/jsx-one-expression-per-line": "off",
     "no-plusplus": "off",
     "no-param-reassign": "off",
-    "no-loop-func": "off"
+    "no-loop-func": "off",
+    "no-alert": "off"
   }
 }
