--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "main": "src/server/index.js",
   "scripts": {
     "lint": "eslint src",
-    "start": "node src/server/index.js",
+    "prod": "node src/server/index.js",
     "build": "webpack --mode production",
     "client": "webpack-dev-server --mode development --devtool inline-source-map --hot",
     "server": "nodemon src/server/index.js",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "start": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "Tim Oehler",
   "license": "ISC",
